LiskovsSubstitutionPrinciple/src/com/zak/lsp/example/bad/two/Graph2D.java
package com.zak.lsp.example.bad.two;

public class Graph2D {
	public void draw(int x,int y){
		System.out.println("Drawing 2D graph at "+x+","+y);
	}
}
